[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sounds/Epic Dark Fantasy Battle.mp3" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Skeleton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Potion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sounds/Pickup.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Knight.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Torch.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Sounds/Zombie Scream 01.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/snake bite hiss-full.wav" type="AudioStream" id=9]
[ext_resource path="res://Scenes/Snake.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Scroll.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Sounds/Level Lose.wav" type="AudioStream" id=13]
[ext_resource path="res://Scenes/tileset.tres" type="TileSet" id=14]
[ext_resource path="res://Assets/Sounds/Epic Orchestral Win.wav" type="AudioStream" id=15]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=16]

[node name="Level1" type="Node2D"]
script = ExtResource( 16 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -355.0
margin_top = -813.0
margin_right = 671.0
margin_bottom = 199.0
color = Color( 0.235294, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -250 )
tile_set = ExtResource( 14 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1835023, 0, 0, -1835022, 0, 0, -1835021, 0, 0, -1835020, 0, 0, -1835019, 0, 0, -1835018, 0, 0, -1835017, 0, 0, -1835016, 0, 0, -1835015, 0, 0, -1835014, 0, 0, -1835013, 0, 0, -1835012, 0, 0, -1835011, 0, 0, -1835010, 0, 0, -1835009, 0, 0, -1900544, 0, 0, -1900543, 0, 0, -1900542, 0, 0, -1900541, 0, 0, -1900540, 0, 0, -1900539, 0, 0, -1900538, 0, 0, -1900537, 0, 0, -1900536, 0, 0, -1900535, 0, 0, -1900534, 0, 0, -1900533, 0, 0, -1900532, 0, 0, -1900531, 0, 0, -1900530, 0, 0, -1900529, 0, 0, -1900528, 0, 0, -1900527, 0, 0, -1900526, 0, 0, -1900525, 0, 0, -1900524, 0, 0, -1900523, 0, 0, -1900522, 0, 0, -1900521, 0, 0, -1900520, 0, 0, -1900519, 0, 0, -1900518, 0, 0, -1900517, 0, 0, -1900516, 0, 0, -1900515, 0, 0, -1900514, 0, 0, -1900513, 0, 0, -1900512, 0, 0, -1900511, 0, 0, -1900510, 0, 0, -1769487, 0, 0, -1835008, 0, 0, -1834974, 0, 0, -1703951, 0, 0, -1769472, 0, 0, -1769438, 0, 0, -1638415, 0, 0, -1703936, 0, 0, -1703902, 0, 0, -1572879, 0, 0, -1638400, 0, 0, -1638366, 0, 0, -1507343, 0, 0, -1507338, 0, 0, -1507333, 0, 0, -1507332, 0, 0, -1507331, 0, 0, -1507330, 0, 0, -1507329, 0, 0, -1572864, 0, 0, -1572863, 0, 0, -1572862, 0, 0, -1572861, 0, 0, -1572860, 0, 0, -1572855, 0, 0, -1572854, 0, 0, -1572853, 0, 0, -1572852, 0, 0, -1572851, 0, 0, -1572850, 0, 0, -1572849, 0, 0, -1572848, 0, 0, -1572847, 0, 0, -1572846, 0, 0, -1572845, 0, 0, -1572844, 0, 0, -1572843, 0, 0, -1572842, 0, 0, -1572841, 0, 0, -1572840, 0, 0, -1572839, 0, 0, -1572838, 0, 0, -1572837, 0, 0, -1572836, 0, 0, -1572835, 0, 0, -1572830, 0, 0, -1441807, 0, 0, -1441802, 0, 0, -1507304, 0, 0, -1507299, 0, 0, -1507294, 0, 0, -1376271, 0, 0, -1376266, 0, 0, -1441768, 0, 0, -1441763, 0, 0, -1441758, 0, 0, -1310735, 0, 0, -1310730, 0, 0, -1376232, 0, 0, -1376222, 0, 0, -1245199, 0, 0, -1245194, 0, 0, -1310696, 0, 0, -1310686, 0, 0, -1179663, 0, 0, -1179658, 0, 0, -1179653, 0, 0, -1179652, 0, 2, -1179651, 0, 0, -1179650, 0, 2, -1179649, 0, 0, -1245184, 0, 0, -1245183, 0, 1, -1245182, 0, 1, -1245181, 0, 1, -1245180, 0, 2, -1245179, 0, 1, -1245178, 0, 0, -1245177, 0, 0, -1245176, 0, 0, -1245175, 0, 0, -1245174, 0, 0, -1245173, 0, 0, -1245172, 0, 0, -1245171, 0, 0, -1245170, 0, 0, -1245169, 0, 0, -1245168, 0, 1, -1245167, 0, 0, -1245166, 0, 2, -1245165, 0, 0, -1245164, 0, 0, -1245163, 0, 1, -1245162, 0, 0, -1245161, 0, 2, -1245160, 0, 1, -1245150, 0, 0, -1114127, 0, 0, -1114122, 0, 0, -1114117, 0, 0, -1179639, 0, 0, -1179624, 0, 2, -1179614, 0, 0, -1048591, 0, 0, -1048586, 0, 0, -1048581, 0, 0, -1114103, 0, 0, -1114088, 0, 2, -1114083, 0, 0, -1114078, 0, 0, -983055, 0, 0, -983050, 0, 0, -983045, 0, 0, -1048567, 0, 2, -1048552, 0, 2, -1048547, 0, 0, -1048542, 0, 0, -917519, 0, 0, -917514, 0, 0, -917509, 0, 0, -983031, 0, 2, -983016, 0, 2, -983011, 0, 0, -983006, 0, 0, -851983, 0, 0, -851978, 0, 0, -917504, 0, 1, -917503, 0, 1, -917502, 0, 0, -917501, 0, 0, -917500, 0, 2, -917499, 0, 1, -917498, 0, 0, -917497, 0, 1, -917496, 0, 0, -917495, 0, 2, -917494, 0, 1, -917493, 0, 1, -917492, 0, 1, -917491, 0, 0, -917490, 0, 1, -917489, 0, 2, -917488, 0, 2, -917487, 0, 0, -917486, 0, 2, -917485, 0, 1, -917475, 0, 0, -917470, 0, 0, -786447, 0, 0, -786442, 0, 0, -851968, 0, 1, -851949, 0, 1, -851939, 0, 0, -851934, 0, 0, -720911, 0, 0, -720906, 0, 0, -786432, 0, 2, -786413, 0, 2, -786403, 0, 0, -786398, 0, 0, -655375, 0, 0, -655370, 0, 0, -720896, 0, 0, -720877, 0, 1, -720867, 0, 0, -720862, 0, 0, -589839, 0, 0, -589834, 0, 0, -589833, 0, 0, -589832, 0, 0, -589831, 0, 0, -589830, 0, 0, -589829, 0, 0, -655360, 0, 0, -655341, 0, 1, -655336, 0, 2, -655331, 0, 0, -655326, 0, 0, -524303, 0, 0, -524298, 0, 0, -524293, 0, 0, -589824, 0, 2, -589819, 0, 1, -589818, 0, 0, -589817, 0, 1, -589816, 0, 1, -589815, 0, 0, -589814, 0, 1, -589813, 0, 0, -589812, 0, 0, -589811, 0, 2, -589810, 0, 2, -589805, 0, 2, -589800, 0, 2, -589795, 0, 0, -589794, 0, 0, -589793, 0, 0, -589792, 0, 0, -589791, 0, 0, -589790, 0, 0, -458767, 0, 0, -458762, 0, 0, -458757, 0, 2, -458756, 0, 0, -458755, 0, 0, -458754, 0, 1, -458753, 0, 0, -524288, 0, 0, -524283, 0, 2, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 1, -524269, 0, 1, -524264, 0, 0, -524259, 0, 0, -524254, 0, 0, -393231, 0, 0, -393226, 0, 0, -393221, 0, 2, -458752, 0, 0, -458747, 0, 2, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458728, 0, 1, -458727, 0, 2, -458726, 0, 0, -458725, 0, 1, -458724, 0, 2, -458723, 0, 0, -458718, 0, 0, -327695, 0, 0, -327690, 0, 0, -327685, 0, 0, -393216, 0, 2, -393211, 0, 0, -393202, 0, 2, -393192, 0, 2, -393187, 0, 0, -393182, 0, 0, -262159, 0, 0, -262154, 0, 0, -262149, 0, 0, -327680, 0, 1, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 2, -327675, 0, 1, -327666, 0, 1, -327656, 0, 1, -327651, 0, 0, -327646, 0, 0, -196623, 0, 0, -196618, 0, 0, -262144, 0, 2, -262139, 0, 2, -262130, 0, 0, -262120, 0, 2, -262115, 0, 0, -262110, 0, 0, -131087, 0, 0, -131082, 0, 0, -196608, 0, 1, -196603, 0, 0, -196594, 0, 1, -196589, 0, 0, -196584, 0, 0, -196579, 0, 0, -196574, 0, 0, -65551, 0, 0, -65546, 0, 0, -131072, 0, 2, -131067, 0, 2, -131058, 0, 0, -131053, 0, 2, -131048, 0, 2, -131043, 0, 0, -131038, 0, 0, -15, 0, 0, -10, 0, 0, -65536, 0, 2, -65531, 0, 0, -65522, 0, 2, -65517, 0, 2, -65512, 0, 1, -65507, 0, 0, -65502, 0, 0, 65521, 0, 0, 65526, 0, 0, 65531, 0, 2, 0, 0, 1, 5, 0, 0, 6, 0, 1, 7, 0, 1, 12, 0, 0, 13, 0, 2, 14, 0, 1, 19, 0, 2, 24, 0, 1, 34, 0, 0, 131057, 0, 0, 131062, 0, 0, 131067, 0, 0, 65536, 0, 2, 65555, 0, 0, 65560, 0, 1, 65570, 0, 0, 196593, 0, 0, 196598, 0, 0, 196603, 0, 2, 131072, 0, 1, 131091, 0, 0, 131096, 0, 2, 131106, 0, 0, 262129, 0, 0, 262134, 0, 0, 262139, 0, 2, 196608, 0, 0, 196627, 0, 0, 196628, 0, 2, 196629, 0, 1, 196630, 0, 2, 196631, 0, 2, 196632, 0, 2, 196642, 0, 0, 327665, 0, 0, 327670, 0, 0, 327675, 0, 0, 262144, 0, 1, 262145, 0, 0, 262146, 0, 2, 262147, 0, 2, 262148, 0, 1, 262149, 0, 2, 262150, 0, 2, 262151, 0, 0, 262152, 0, 1, 262153, 0, 0, 262154, 0, 0, 262155, 0, 2, 262156, 0, 0, 262157, 0, 0, 262158, 0, 1, 262159, 0, 0, 262160, 0, 1, 262161, 0, 0, 262162, 0, 0, 262163, 0, 2, 262168, 0, 2, 262173, 0, 0, 262178, 0, 0, 393201, 0, 0, 393211, 0, 1, 327704, 0, 2, 327709, 0, 0, 327714, 0, 0, 458737, 0, 0, 458747, 0, 2, 393240, 0, 2, 393245, 0, 0, 393250, 0, 0, 524273, 0, 0, 524283, 0, 0, 458776, 0, 0, 458781, 0, 0, 458786, 0, 0, 589809, 0, 0, 589819, 0, 1, 589820, 0, 0, 589821, 0, 1, 589822, 0, 2, 589823, 0, 1, 524288, 0, 1, 524289, 0, 1, 524290, 0, 1, 524291, 0, 2, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 2, 524300, 0, 2, 524301, 0, 2, 524302, 0, 0, 524303, 0, 2, 524304, 0, 2, 524305, 0, 1, 524306, 0, 2, 524307, 0, 1, 524308, 0, 2, 524309, 0, 0, 524310, 0, 2, 524311, 0, 2, 524312, 0, 2, 524317, 0, 0, 524322, 0, 0, 655345, 0, 0, 655350, 0, 0, 655359, 0, 0, 589853, 0, 0, 589858, 0, 0, 720881, 0, 0, 720886, 0, 0, 720895, 0, 0, 655389, 0, 0, 655394, 0, 0, 786417, 0, 0, 786422, 0, 0, 786431, 0, 0, 720925, 0, 0, 720930, 0, 0, 851953, 0, 0, 851958, 0, 0, 851967, 0, 0, 786461, 0, 0, 786466, 0, 0, 917489, 0, 0, 917494, 0, 0, 917495, 0, 0, 917496, 0, 0, 917497, 0, 0, 917498, 0, 0, 917499, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 1, 851969, 0, 2, 851970, 0, 2, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 1, 851975, 0, 1, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 1, 851982, 0, 2, 851983, 0, 2, 851984, 0, 2, 851985, 0, 0, 851986, 0, 1, 851987, 0, 1, 851988, 0, 2, 851989, 0, 2, 851990, 0, 2, 851991, 0, 0, 851992, 0, 1, 851993, 0, 0, 851994, 0, 2, 851995, 0, 2, 851996, 0, 2, 851997, 0, 0, 852002, 0, 0, 983025, 0, 0, 983033, 0, 0, 917538, 0, 0, 1048561, 0, 0, 1048569, 0, 0, 983074, 0, 0, 1114097, 0, 0, 1114105, 0, 0, 1048610, 0, 0, 1179633, 0, 0, 1179641, 0, 0, 1114146, 0, 0, 1245169, 0, 0, 1245170, 0, 0, 1245171, 0, 0, 1245172, 0, 0, 1245173, 0, 0, 1245174, 0, 0, 1245175, 0, 0, 1245176, 0, 0, 1245177, 0, 0, 1245178, 0, 0, 1245179, 0, 0, 1245180, 0, 0, 1245181, 0, 0, 1245182, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1245189, 0, 0, 1245198, 0, 0, 1310725, 0, 0, 1310734, 0, 0, 1376261, 0, 0, 1376270, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0 )

[node name="TileMapOverlay" type="TileMap" parent="."]
position = Vector2( 0, -250 )
tile_set = ExtResource( 14 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -524281, 1, 0, -524276, 1, 0 )

[node name="Knight" parent="." instance=ExtResource( 6 )]
position = Vector2( 157.949, 74.3586 )
z_index = 1

[node name="Camera2D" type="Camera2D" parent="Knight"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
editor_draw_screen = false

[node name="Door" parent="." instance=ExtResource( 1 )]
position = Vector2( 160.634, -365.678 )

[node name="Torch" parent="." instance=ExtResource( 7 )]
position = Vector2( 55.2528, -35.1694 )

[node name="Torch2" parent="." instance=ExtResource( 7 )]
position = Vector2( 231.861, -114.461 )

[node name="Torch3" parent="." instance=ExtResource( 7 )]
position = Vector2( 518.877, 45.2267 )

[node name="Torch4" parent="." instance=ExtResource( 7 )]
position = Vector2( 87.5542, -316.589 )

[node name="Torch5" parent="." instance=ExtResource( 7 )]
position = Vector2( 231.861, -316.589 )

[node name="Torch6" parent="." instance=ExtResource( 7 )]
position = Vector2( -112.83, -401.027 )

[node name="Torch7" parent="." instance=ExtResource( 7 )]
position = Vector2( 103.186, -546.041 )

[node name="Torch8" parent="." instance=ExtResource( 7 )]
position = Vector2( 439.38, -626.888 )

[node name="Torch9" parent="." instance=ExtResource( 7 )]
position = Vector2( 231.861, -706.731 )

[node name="Torch10" parent="." instance=ExtResource( 7 )]
position = Vector2( 423.38, -353.148 )

[node name="Scroll" parent="." instance=ExtResource( 11 )]
position = Vector2( 45.4062, -353.317 )

[node name="Scroll2" parent="." instance=ExtResource( 11 )]
position = Vector2( 512.073, -358.735 )

[node name="Scroll3" parent="." instance=ExtResource( 11 )]
position = Vector2( 118.218, -507.261 )

[node name="Scroll4" parent="." instance=ExtResource( 11 )]
position = Vector2( -113.625, -376.704 )

[node name="Scroll5" parent="." instance=ExtResource( 11 )]
position = Vector2( 526.119, -680.518 )

[node name="Potion" parent="." instance=ExtResource( 4 )]
position = Vector2( 430.527, -325.024 )

[node name="Potion2" parent="." instance=ExtResource( 4 )]
position = Vector2( 307.516, -135.249 )

[node name="Potion3" parent="." instance=ExtResource( 4 )]
position = Vector2( -13.9583, -684.453 )

[node name="Potion4" parent="." instance=ExtResource( 4 )]
position = Vector2( 366.284, -583.58 )

[node name="Potion5" parent="." instance=ExtResource( 4 )]
position = Vector2( -75.4881, 4.42245 )

[node name="Skeleton" parent="." instance=ExtResource( 3 )]
position = Vector2( 200.284, 24.5519 )

[node name="Skeleton2" parent="." instance=ExtResource( 3 )]
position = Vector2( 491.586, -269.801 )

[node name="Skeleton3" parent="." instance=ExtResource( 3 )]
position = Vector2( -46.8851, -143.252 )

[node name="Skeleton4" parent="." instance=ExtResource( 3 )]
position = Vector2( 251.966, -315.987 )

[node name="Skeleton5" parent="." instance=ExtResource( 3 )]
position = Vector2( 5.1147, -487.609 )

[node name="Snake" parent="." instance=ExtResource( 10 )]
position = Vector2( -173.976, -482.473 )

[node name="Snake2" parent="." instance=ExtResource( 10 )]
position = Vector2( 207.454, -132.149 )

[node name="Snake3" parent="." instance=ExtResource( 10 )]
position = Vector2( 391.66, -462.744 )

[node name="Snake4" parent="." instance=ExtResource( 10 )]
position = Vector2( 495.375, -681.103 )

[node name="Snake5" parent="." instance=ExtResource( 10 )]
position = Vector2( 326.641, -574.742 )

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="GUI" parent="." instance=ExtResource( 12 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
autoplay = true

[node name="SnakeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 5.0

[node name="SkeletonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="potion" from="Knight" to="." method="potion_hit"]
[connection signal="scroll" from="Knight" to="." method="scroll_pickup"]
[connection signal="skeleton" from="Knight" to="." method="skeleton_hit"]
[connection signal="snake" from="Knight" to="." method="snake_hit"]
[connection signal="win" from="Door" to="." method="next_level"]
